Add CSS Holographic effects use case, and make formatting consistent

--- a/index.html
+++ b/index.html
@@ -256,6 +256,25 @@
           </li>
           <li>
             <figure>
+              <a href="https://codepen.io/HejChristian/full/YPzLbYX" target="_blank">
+                <video autoplay muted loop playsinline
+                  style="object-fit: cover; object-fit: center bottom; padding-bottom: 1px; aspect-ratio: 16/9;">
+                  <source src="samples/deer-scroll-effect.mp4" type="video/mp4" />
+                </video>
+              </a>
+              <figcaption>
+                <p>
+                  Experimental <a href="https://codepen.io/HejChristian/full/YPzLbYX" target="_blank">
+                    CSS Holographic Masks</a> apply effects on illustrations, some of which using dots as particles.
+                  Featured on <a href="https://codepen.io/" target="_blank">CodePen</a>.
+                  <span class="author">By
+                    <a href="https://codepen.io/HejChristian">Christian Alder</a></span>
+                </p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
               <a href="https://youtu.be/PWmy2KlGlrc" target="_blank">
                 <img src="samples/ufscar.gif" />
               </a>
@@ -266,6 +285,28 @@
                   organized by <i lang="pt-br">Meio de Cultura UFSCar</i>.
                   <span class="author">By
                     <a href="https://vsueiro.com/">Vinicius Sueiro</a></span>
+                </p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <a href="https://www.otempo.com.br/cidades/tragedia-de-brumadinho-oito-estrategias-de-busca-nortearam-os-bombeiros-1.2801259"
+                target="_blank">
+                <img src="samples/underground.png" />
+              </a>
+              <figcaption>
+                <p>
+                  How many bodies or body parts were discovered underground
+                  after
+                  <i lang="pt-br">Brumadinho</i> dam collapse.
+                  <span class="author">
+                    By
+                    <a href="https://www.linkedin.com/in/manuel-marçal-05129914a/" target="_blank">Manuel Marçal</a>,
+                    <a href="https://www.linkedin.com/in/marcos-carreiro-26413756/" target="_blank">Marcos Carreiro</a>
+                    &
+                    <a href="https://www.linkedin.com/in/renato-crozatti/" target="_blank">Renato Crozatti</a>
+                  </span>
                 </p>
               </figcaption>
             </figure>
@@ -291,28 +332,6 @@
                   <em>Not</em> created using this tool. Showcased only for
                   inspiration.
                 </small>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <a href="https://www.otempo.com.br/cidades/tragedia-de-brumadinho-oito-estrategias-de-busca-nortearam-os-bombeiros-1.2801259"
-                target="_blank">
-                <img src="samples/underground.png" />
-              </a>
-              <figcaption>
-                <p>
-                  How many bodies or body parts were discovered underground
-                  after
-                  <i lang="pt-br">Brumadinho</i> dam collapse.
-                  <span class="author">
-                    By
-                    <a href="https://www.linkedin.com/in/manuel-marçal-05129914a/" target="_blank">Manuel Marçal</a>,
-                    <a href="https://www.linkedin.com/in/marcos-carreiro-26413756/" target="_blank">Marcos Carreiro</a>
-                    &
-                    <a href="https://www.linkedin.com/in/renato-crozatti/" target="_blank">Renato Crozatti</a>
-                  </span>
-                </p>
               </figcaption>
             </figure>
           </li>
