--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
               <figcaption>
                 <p>
                   Experimental <a href="https://codepen.io/HejChristian/full/YPzLbYX" target="_blank">
-                    CSS Holographic Masks</a> apply effects on illustrations, some of which using dots as particles.
+                    CSS Holographic Masks</a> apply effects on illustrations, some of which use dots as particles.
                   Featured on <a href="https://codepen.io/" target="_blank">CodePen</a>.
                   <span class="author">By
                     <a href="https://codepen.io/HejChristian">Christian Alder</a></span>
