Remove Fe’s name and refer to company instead

--- a/index.html
+++ b/index.html
@@ -244,12 +244,13 @@
               </a>
               <figcaption>
                 <p>
-                  Printed infographic by <a href="https://store.nytimes.com/collections/the-new-york-times-for-kids"
-                    target="_blank">The New
-                    York Times for Kids</a> about how big
-                  $1 billion actually is, featuring 100,000 dots inside a circle.
+                  Printed infographic about how big
+                  $1 billion actually is, featuring 100,000 tiny dots inside a circle.
                   <span class="author">By
-                    <a href="https://fdidini.com/">Fernanda Didini</a></span>
+                    <a href="https://store.nytimes.com/collections/the-new-york-times-for-kids" target="_blank">The New
+                      York Times for Kids</a>
+                    <!-- <a href="https://fdidini.com/">Fernanda Didini</a> -->
+                  </span>
                 </p>
               </figcaption>
             </figure>
